--- a/Config/pf_elk/30-outputs.conf
+++ b/Config/pf_elk/30-outputs.conf
@@ -1,6 +1,6 @@
 output {
         elasticsearch {
-                hosts => ["http://localhost:9200"]
+                hosts => ["http://192.168.10.10:9200"]
                 index => "logstash-%{+YYYY.MM.dd}" }
 }
 
