--- a/Config/pf_elk/01-inputs.conf
+++ b/Config/pf_elk/01-inputs.conf
@@ -1,3 +1,5 @@
+### INPUT SECTION ###
+### This section make Logstash to listen on port 5044 for incoming logs & provides SSL certificate for secure connection.
 input {  
   tcp {
     type => "syslog"
