--- a/Config/pf_elk/10-syslog.conf
+++ b/Config/pf_elk/10-syslog.conf
@@ -1,3 +1,5 @@
+### FILTER SECTION ###
+### This section parse the logs before sending them to Elasticsearch.
 filter {
   if [type] == "syslog" {
     if [host] =~ /192\.168\.10\.1/ {
