--- a/Config/pf_elk/30-outputs.conf
+++ b/Config/pf_elk/30-outputs.conf
@@ -1,3 +1,5 @@
+### OUTPUT SECTION ###
+### This section defines the storage for the logs to be stored.
 output {
         elasticsearch {
                 hosts => ["http://192.168.10.10:9200"]
