--- a/Config/pf_elk/syslog.conf
+++ b/Config/pf_elk/syslog.conf
@@ -7,11 +7,11 @@ filter {
         add_tag => ["pfsense", "Ready"]
       }
     }
-    if [host] =~ /172\.2\.22\.1/ {
-      mutate {
-        add_tag => ["pfsense-2", "Ready"]
-      }
-    }
+#    if [host] =~ /172\.2\.22\.1/ {
+#      mutate {
+#        add_tag => ["pfsense-2", "Ready"]
+#      }
+#    }
 
     if "Ready" not in [tags] {
       mutate {
